Added Home ViewModel Started Code and Configurations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Crypto</string>
+    <string name="title_activity_crypto_home">CryptoHomeActivity</string>
 </resources>
