Added Firebase Crashlytics and Performance Module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Crypto</string>
+    <string name="app_name">CryptoApp</string>
     <string name="title_activity_crypto_home">CryptoHomeActivity</string>
 </resources>
