--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CryptoApp</string>
     <string name="title_activity_crypto_home">CryptoHomeActivity</string>
+    <string name="title_activity_detail">DetailActivity</string>
 </resources>
